--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ h1 span{
   position:relative;
   margin:0 auto;
   border:8px solid #ebebeb;
-  background: url(../img/icons/responsive.png) #f3f3f3 no-repeat center center;
+  background: url(../img/icons/Gear.png) #f3f3f3 no-repeat center center;
   -moz-border-radius:174px;
   -webkit-border-radius:174px;
   border-radius: 174px;
@@ -394,7 +394,7 @@ h1 span{
 }
 
 .about-us .column-one .circle-one:hover{
-  background: url(../img/icons/minimalist.png) #2fa68e no-repeat center center;
+  background: url(../img/icons/Gear.png) #2fa68e no-repeat center center;
 
 }
 
@@ -442,7 +442,7 @@ h1 span{
   position:relative;
   margin:0 auto;
   border:8px solid #ebebeb;
-  background: url(../img/icons/soundEditor-icon.png) #f3f3f3 no-repeat center center;
+  background: url(../img/icons/responsive.png) #f3f3f3 no-repeat center center;
   -moz-border-radius:174px;
   -webkit-border-radius:174px;
   border-radius: 174px;
@@ -456,7 +456,7 @@ h1 span{
 }
 
 .about-us .column-three .circle-three:hover{ 
-  background: url(../img/icons/soundEditor-icon.png) #2fa68e no-repeat center center;
+  background: url(../img/icons/responsive.png) #2fa68e no-repeat center center;
 }
 
 
