Tried scaling video

--- a/css/style.css
+++ b/css/style.css
@@ -1926,6 +1926,14 @@ p.aut {
     height: auto;
 }
 
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
 .media.response-info {
     margin-top: 3em;
 }
