--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,7 @@ p.vel {
     height: 90px;
     border-radius: 50%;
     text-align: center;
+    position: relative;
     text-decoration: none;
     z-index: 1;
     color: #fff;
