Updated color palette

--- a/css/chocolat.css
+++ b/css/chocolat.css
@@ -3,7 +3,7 @@ body{
 	padding:0;
 }
 #Choco_overlay{
-	background:#c6976b !important;
+	background:#FFFFFF !important;
 	position: fixed;
 	top: 0;
 	left: 0;
