Added colour codes

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@ Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
-Color Wheel: 
+Color Wheel: #ABCFED
+             #FFFFFF
+             #1666A8
+             #1E4566
+             #313336
 --*/
 
 html,
