--- a/css/style.css
+++ b/css/style.css
@@ -1877,10 +1877,9 @@ a:visited {
 }
 
 .admin-text-right .centered-video {
-/**    position: relative;
-    width: auto;
-    height: auto; */
-    	position:relative;
+    width: 560px;
+    height: 315px; 
+    	position:absolute;
 	padding-bottom:56.25%;
 	padding-top:30px;
 	height:0;
@@ -1893,6 +1892,7 @@ a:visited {
 	left:0;
 	width:100%;
 	height:100%;
+    
 }
 
 .media.response-info {
