--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,13 @@ a {
     margin: 0;
 }
 
+a.in-text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 100%;
+    font-weight: bold;
+    margin: 0; 
+}
+
 ul,
 label {
     margin: 0;
@@ -51,6 +58,7 @@ body a:hover {
 }
 
 .navbar-default {
+    background: none;
     background: none;
     border: none;
     margin: 0;
